--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hello World!
+<h1>Applicazioni internet</h1>
+<p>Più dettagli saranno disponibili a breve.</p>
+<p>Visualizza i repository su <a href="https://github.com/ApplicazioniInternet2017">GitHub</a>
